
  - [bug] Fixed identity_key() function which 
    was not accepting a scalar argument 
    for the identity.  [ticket:2508].

- engine
  - [bug] Fixed memory leak in C version of
    result proxy whereby DBAPIs which don't deliver
    pure Python tuples for result rows would
    fail to decrement refcounts correctly.
    The most prominently affected DBAPI
    is pyodbc.  [ticket:2489]

- oracle
  - [bug] Added ROWID to oracle.*, [ticket:2483]

- mysql
  - [feature] Added a new dialect for Google App
    Engine.  Courtesy Richie Foreman. [ticket:2484]


0.7.7
=====
- orm
  - [bug] Fixed issue in unit of work
    whereby setting a non-None self-referential
    many-to-one relationship to None
    would fail to persist the change if the
    former value was not already loaded.
    [ticket:2477].

  - [feature] Added prefix_with() method
    to Query, calls upon select().prefix_with()
    to allow placement of MySQL SELECT
    directives in statements.  Courtesy
    Diana Clarke [ticket:2443]

  - [bug] Fixed bug in 0.7.6 introduced by 
    [ticket:2409] whereby column_mapped_collection
    used against columns that were mapped as
    joins or other indirect selectables
    would fail to function.

  - [feature] Added new flag to @validates
    include_removes.  When True, collection
    remove and attribute del events
    will also be sent to the validation function,
    which accepts an additional argument
    "is_remove" when this flag is used.

  - [bug] Fixed bug whereby polymorphic_on
    column that's not otherwise mapped on the 
    class would be incorrectly included
    in a merge() operation, raising an error.
    [ticket:2449]

  - [bug] Fixed bug in expression annotation
    mechanics which could lead to incorrect
    rendering of SELECT statements with aliases
    and joins, particularly when using 
    column_property().  [ticket:2453]

  - [bug] Fixed bug which would prevent
    OrderingList from being pickleable